# hyacinth

./: .gitignore  404.html  LICENSE  README.md  TODO.md  index.html  search.html
compiler/: hie.yaml  package.yaml  stack.yaml
compiler/src/: Interpreter.hs  Lib.hs  StdLib.hs
compiler/src/BytecodeGeneration/: Bytecode.hs  BytecodeGeneration.hs  BytecodeGenerator.hs  Encoding.hs
compiler/src/Core/: EitherIO.hs  ErrorIO.hs  ErrorState.hs  Errors.hs  FilePositions.hs  Graph.hs  Pretty.hs  SyntaxTree.hs  Type.hs  Utils.hs
compiler/src/FunctionLifting/: FunctionLifter.hs  FunctionLifting.hs  SyntaxTree.hs
compiler/src/IdentifierBinding/: IdentifierBinder.hs  SyntaxTree.hs  (+1 more)
compiler/test/: CommentSpec.hs  ControlFlowSpec.hs  EndToEnd.hs  ExpressionSpec.hs  FunctionSpec.hs  LexerSpec.hs  ListSpec.hs  Main.hs  MethodSpec.hs  ParserSpec.hs  RecordSpec.hs  SectionerSpec.hs  Spec.hs  StringSpec.hs  TokenTestHelpers.hs  TypeTesting.hs  VariableSpec.hs  VarianceSpec.hs
control_flow/: index.html
core_concepts/: index.html
docs/: mkdocs.yml
docs/docs/: control_flow.md  core_concepts.md  functions.md  getting_started.md  index.md  lists.md  misc.md  records.md  type_synonyms.md  variables.md
examples/: Cons.hyc  Fib.hyc  Guess.hyc  Hello.hyc  List.hyc  Test.hyc  Tree.hyc
functions/: index.html
getting_started/: index.html
lists/: index.html
misc/: index.html
records/: index.html
search/: search_index.json
type_synonyms/: index.html
variables/: index.html
virtual-machine/: Cargo.toml
virtual-machine/src/: core.rs  file_reader.rs  main.rs  runner.rs
(+20 files in other folders)
