[package]
name = "hyacinth-vm"
version = "0.1.0"
authors = ["Robin Gieseking"]
edition = "2021"
description = "The interpreter for Hyacinth bytecode."
repository="github.com/avian-lovelace/hyacinth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
